k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  # namespace: demo
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007   # optional
